--- a/src/components/pages/Admin/DetailedCompotents/AnswersAndCode.module.css
+++ b/src/components/pages/Admin/DetailedCompotents/AnswersAndCode.module.css
@@ -1,77 +1,78 @@
 .answer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10px 15px 10px 10px;
-    margin: 5px;
-    border: 1.5px solid #d9d9d9;
-    border-radius: 5px;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 17px;
-    color: #555555;
-    outline: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px 15px 10px 10px;
+  margin: 5px;
+  border: 1.5px solid #d9d9d9;
+  border-radius: 5px;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 17px;
+  color: #555555;
+  outline: none;
 }
 
 .answer input {
-    width: 90%;
-    color: #555555;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 17px;
-    border: none;
-    outline: none;
+  width: 90%;
+  color: #555555;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 17px;
+  border: none;
+  outline: none;
 }
 
 .answer input::placeholder {
-    color: #bbbbbb;
+  color: #bbbbbb;
 }
 
 .codeWrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-right: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-right: 5px;
 }
 
 .codeWrapper textarea {
-    max-width: 96%;
-    margin: 5px;
-    border: 1.5px solid #d9d9d9;
-    border-radius: 5px;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 17px;
-    outline: none;
+  max-width: 96%;
+  margin: 5px;
+  border: 1.5px solid #d9d9d9;
+  border-radius: 5px;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 17px;
+  outline: none;
 }
 
 .disappeared {
-    display: none;
+  display: none;
 }
-  
-.appeared, .appearedTrue {
-    position: relative;
-    width:100%;
-    display: inline-flex;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 19px;
-    color: #555555;
-    font-weight: bold;
-    cursor: pointer;
+
+.appeared,
+.appearedTrue {
+  position: relative;
+  width: 100%;
+  display: inline-flex;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 19px;
+  color: #555555;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .appearedTrue {
-    color: #009900!important;
+  color: #009900 !important;
 }
 
 .hint {
-    position: absolute;
-    margin-top: 25px;
-    margin-left: 25px;
-    height: max-content;
-    width: max-content;
-    color: #757575;
-    font-size: 13px;
-    font-family: 'Courier New', Courier, monospace;
-    border: 1px solid #bbbbbb;
-    border-radius: 3px;
-    background-color: whitesmoke;
-    padding: 3px;
+  position: absolute;
+  margin-top: 25px;
+  margin-left: 25px;
+  height: max-content;
+  width: max-content;
+  color: #757575;
+  font-size: 13px;
+  font-family: "Courier New", Courier, monospace;
+  border: 1px solid #bbbbbb;
+  border-radius: 3px;
+  background-color: whitesmoke;
+  padding: 3px;
 }
