--- a/src/components/pages/DetailedComponents/Buttons/CustomButton/_CustomButton.css
+++ b/src/components/pages/DetailedComponents/Buttons/CustomButton/_CustomButton.css
@@ -1,64 +1,52 @@
 .linear ::before {
-    content: "";
-    position: absolute;
-    width: 1.5px;
-    height: 49px;
-    background-color: #bbbbbb;
-    top: -50px;
+  content: "";
+  position: absolute;
+  width: 1.5px;
+  height: 49px;
+  background-color: #bbbbbb;
+  top: -50px;
 }
 
 .small {
-    border: 1.5px solid #bbbbbb;
-    width: 20% !important;
+  border: 1.5px solid #bbbbbb;
+  width: 20% !important;
 }
 
 .makeStyles-root-1 {
-    border: 1.5px solid #bbbbbb !important;
-    height: 48px;
+  border: 1.5px solid #bbbbbb !important;
+  height: 48px;
 }
 
 .MuiButton-text {
-    padding: 0 0 !important;
+  padding: 0 0 !important;
 }
 
-.small.entering{
-
-    animation: small 500ms ;
+.small.entering {
+  animation: small 500ms;
 }
-.small.exiting{
-    
-    animation: small 500ms;
+.small.exiting {
+  animation: small 500ms;
 }
 
-@keyframes  small{
-
-  0%{
-
-   
-    transform:rotateX(0deg)
+@keyframes small {
+  0% {
+    transform: rotateX(0deg);
   }
-  50%{
-
-   
-    transform:rotateX(180deg)
+  50% {
+    transform: rotateX(180deg);
   }
 
-
-
-  100%{
-
-    
-    transform:rotateX(0deg)
+  100% {
+    transform: rotateX(0deg);
   }
-
 }
 
 .rotate-active {
   animation: spin 1s linear infinite;
 }
 
-.rotate-exit.rotate-exit-active{
-  opacity:1;
+.rotate-exit.rotate-exit-active {
+  opacity: 1;
 }
 .rotate-active {
   animation: spin 1s linear infinite;
