--- a/src/components/pages/DetailedComponents/Loader/Loader.css
+++ b/src/components/pages/DetailedComponents/Loader/Loader.css
@@ -1,45 +1,73 @@
 @keyframes ldio {
-   0% { transform: translate(12px,80px) scale(0); }
-  25% { transform: translate(12px,80px) scale(0); }
-  50% { transform: translate(12px,80px) scale(1); }
-  75% { transform: translate(80px,80px) scale(1); }
- 100% { transform: translate(148px,80px) scale(1); }
+  0% {
+    transform: translate(12px, 80px) scale(0);
+  }
+  25% {
+    transform: translate(12px, 80px) scale(0);
+  }
+  50% {
+    transform: translate(12px, 80px) scale(1);
+  }
+  75% {
+    transform: translate(80px, 80px) scale(1);
+  }
+  100% {
+    transform: translate(148px, 80px) scale(1);
+  }
 }
 @keyframes ldio-r {
-   0% { transform: translate(148px,80px) scale(1); }
- 100% { transform: translate(148px,80px) scale(0); }
+  0% {
+    transform: translate(148px, 80px) scale(1);
+  }
+  100% {
+    transform: translate(148px, 80px) scale(0);
+  }
 }
 @keyframes ldio-c {
-   0% { background: #4c3474 }
-  25% { background: #a489d4 }
-  50% { background: #7e57c2 }
-  75% { background: #65469b }
- 100% { background: #4c3474 }
+  0% {
+    background: #4c3474;
+  }
+  25% {
+    background: #a489d4;
+  }
+  50% {
+    background: #7e57c2;
+  }
+  75% {
+    background: #65469b;
+  }
+  100% {
+    background: #4c3474;
+  }
 }
 .ldio div {
   position: absolute;
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  transform: translate(80px,80px) scale(1);
+  transform: translate(80px, 80px) scale(1);
   background: #4c3474;
-  animation: ldio 3.3333333333333335s infinite cubic-bezier(0,0.5,0.5,1);
- 
+  animation: ldio 3.3333333333333335s infinite cubic-bezier(0, 0.5, 0.5, 1);
 }
 .ldio div:nth-child(1) {
   background: #65469b;
-  transform: translate(148px,80px) scale(1);
-  animation: ldio-r 0.8333333333333334s infinite cubic-bezier(0,0.5,0.5,1), ldio-c 3.3333333333333335s infinite step-start;
-}.ldio div:nth-child(2) {
+  transform: translate(148px, 80px) scale(1);
+  animation: ldio-r 0.8333333333333334s infinite cubic-bezier(0, 0.5, 0.5, 1),
+    ldio-c 3.3333333333333335s infinite step-start;
+}
+.ldio div:nth-child(2) {
   animation-delay: -0.8333333333333334s;
   background: #4c3474;
-}.ldio div:nth-child(3) {
+}
+.ldio div:nth-child(3) {
   animation-delay: -1.6666666666666667s;
   background: #65469b;
-}.ldio div:nth-child(4) {
+}
+.ldio div:nth-child(4) {
   animation-delay: -2.5s;
   background: #7e57c2;
-}.ldio div:nth-child(5) {
+}
+.ldio div:nth-child(5) {
   animation-delay: -3.3333333333333335s;
   background: #a489d4;
 }
@@ -57,9 +85,11 @@
   backface-visibility: hidden;
   transform-origin: 0 0; /* see note above */
 }
-.ldio div { box-sizing: content-box; }
+.ldio div {
+  box-sizing: content-box;
+}
 
 .center {
-    text-align: center;
-    margin-top: 10%;
+  text-align: center;
+  margin-top: 10%;
 }
