--- a/src/components/pages/StartPage/_StartPage.css
+++ b/src/components/pages/StartPage/_StartPage.css
@@ -1,45 +1,45 @@
 .changable-wrapper-custom {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    border: 5px solid #E2DDEE;
-    background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border: 5px solid #e2ddee;
+  background-color: white;
 }
 
 .innerWrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 85%;
 }
 
 .innerWrapper .logo {
-    font-size: 85px;
-    letter-spacing: 3px;
+  font-size: 85px;
+  letter-spacing: 3px;
 }
 
 .innerWrapper .slogan {
-    font-size: 35px;
-    letter-spacing: 5px;
+  font-size: 35px;
+  letter-spacing: 5px;
 }
 
 .arrow img {
-    height: 80px;
-    width: 25px;
+  height: 80px;
+  width: 25px;
 }
 
 .buttons {
-    display: flex;
-    flex-direction: column;
-    width: 55%;
+  display: flex;
+  flex-direction: column;
+  width: 55%;
 }
 
 .buttons .linear ::before {
-    width: 1.6px !important;
+  width: 1.6px !important;
 }
 
 footer {
-    color: #999999;
+  color: #999999;
 }
