--- a/src/components/pages/Quiz/Quiz.css
+++ b/src/components/pages/Quiz/Quiz.css
@@ -10,13 +10,7 @@
     padding: 20px;
 }
  
-  .quizMain {
-    display: grid;
-    margin-left: 160px;
-    position: fixed;
-    width: 70%;
-    height: 93%;
-}
+  
  
 .question {
   padding: 20px;
@@ -90,7 +84,7 @@
   width: 20px;
   height: 20px;
   margin-right: 18px;
-  margin: 20px;
+  margin: 12px;
 }
 
 .choice > div > label{
@@ -114,7 +108,6 @@
   height: 48px;
   width: 25%;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 19px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -152,7 +145,6 @@ input[type='submit']:active {
 
 .sidenav {
   height: 100%;
-  width: 180px;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -164,13 +156,7 @@ input[type='submit']:active {
   animation: 500ms ease-out 0s 1 slideInFromLeft;
 }
 
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 18px;
-  color: #E2DDEE;
-  display: block;
-}
+
 
 .sidenav a:hover {
   color: #f1f1f1;
@@ -188,13 +174,9 @@ input[type='submit']:active {
 
 .passedQuestion {
   color:#a489d4!important;
-  font-size: 17px!important;
+  /* font-size: 17px!important; */
 }
 
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
 
 @keyframes slideInFromLeft {
   0% {
@@ -235,66 +217,64 @@ input[type='submit']:active {
   }
 }
 
+@media screen and (min-width: 800px) and (max-width: 1600px) {
+  .quizMain {
+    display: grid;
+    position: fixed;
+    grid-template-columns: repeat(2, 50%);
+    margin-left: 160px;
+    width: 70%;
+    height: 93%;
+    
+  }
+  .sidenav{
+    width: 180px;
+  }
 
+  .sidenav a {
+    padding: 6px 8px 6px 16px;
+    font-size: 18px;
+  }
+  .passedQuestion {
+   font-size: 17px!important;
+  }
 
-
-
-/*.quizNav-enter-done{
-  transform: translateX(0);
-  transition: transform 1s;
-}*/
-
-/*
-.answer > div > label:before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  margin: 4px;
-  width: 22px;
-  height: 22px;
-  transition: transform 0.28s ease;
-  border-radius: 3px;
-  border: 2px solid #7e57c2;
+  .btns > button, .btns input[type='submit'], .finishBtn{
+    font-size: 19px;
+  }
+  
 }
 
-.answer > div > label:after {
-  content: '';
+ .sidenav a {
+  /* padding: 6px 8px 6px 16px;
+  font-size: 18px; */
+  text-decoration: none;
+  color: #E2DDEE;
   display: block;
-  width: 10px;
-  height: 5px;
-  border-bottom: 2px solid #7e57c2;
-  border-left: 2px solid #7e57c2;
-  -webkit-transform: rotate(-45deg) scale(0);
-  transform: rotate(-45deg) scale(0);
-  transition: transform ease 0.25s;
-  will-change: transform;
-  position: absolute;
-  top: 12px;
-  left: 10px;
-}
+} 
 
-.answer > div > input[type="checkbox"]:checked ~ label::before {
-  color: #7e57c2;
-}
+@media screen and (min-width: 200px) and (max-width: 800px) {
+  .quizMain {
+    display: grid;
+    position: absolute;
+    grid-template-rows: repeat(2, 50%);
+    margin-left: 80px;
+    width: 80%;
+    height:95%;
+    
+  }
+  .sidenav{
+    width: 100px;
+  }
 
-.answer > div > label {
-  min-height: 34px;
-  display: block;
-  padding-left: 40px;
-  margin-bottom: 0;
-  font-weight: normal;
-  cursor: pointer;
-  vertical-align: sub;
+  .sidenav a {
+    padding: 3px 4px 3px 8px;
+    font-size: 11px;
+  }
+  .passedQuestion {
+     font-size: 10px!important;
+  }
+  .btns > button, .btns input[type='submit'], .finishBtn{
+    font-size: 15px;
+  }
 }
-
-.answer > div > label span {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-
-.answer > div > input[type="checkbox"]:focus + label::before {
-  outline: 0;
-}*/
